--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,10 +25,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>iConnect</title>
+    <style>
+      .loading{
+        background-color: rgb(48, 3, 100);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading">
+        <img src="../src/assets/images/logo.png" alt="">
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
